Fix issue of text not wrapping in div, by applying word-break property to the content css class

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 
 .content {
     display: none;
+    word-break:break-all;
 }
 
 /* Header */
